--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Collaborative Open-Source Curriculum Development Project
+title: NECX
 email: katyhuff@gmail.com
 description: "Website for the Strategic Instructional Innovations Program Project: Collaborative Open-Source Curiculum Development"
 baseurl: "" # the subpath of your site, e.g. /blog
