--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: NECX
 email: katyhuff@gmail.com
 description: "Website for the Strategic Instructional Innovations Program Project: Collaborative Open-Source Curiculum Development"
-baseurl: "/cc" # the subpath of your site, e.g. /blog
-url: "https://arfc.github.io/cc" # the base hostname & protocol for your site
+baseurl: "/necx" # the subpath of your site, e.g. /blog
+url: "https://arfc.github.io/necx" # the base hostname & protocol for your site
 twitter_username: katyhuff
 github_username: arfc
 logo: "/img/nekx.png"
